welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:43: error: '<-' expected but ')' found.
		for (j<1 to 4) avance()
                             ^PatternPicture:45: error: illegal start of simple expression
	}
        ^